FCG.Users/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usersapi
  namespace: fcg-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: usersapi
  template:
    metadata:
      labels:
        app: usersapi
    spec:
      containers:
        - name: usersapi
          image: acrfcgprod.azurecr.io/usersapi:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
