FCG.Users/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usersapi
  namespace: fcg-prod
spec:
  selector:
    app: usersapi
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
